feat: add dungeon map (#95)
* feat: add dungeon map

Add dungeon map, api connection, fix a bug with the storage tracker, remove all deprecated option constructors, add string and color options, allow for custom data repository, remove region based island detection and replace it with hypixel mod api.

After this commit we bundle the hypixel mod api into the final jar for user convenience

* fix: add repo for entities dependency